# TRIBEV2

./: .env.example  .gitignore  CLAUDE.md  DEMO_SCRIPT.md  DEVELOPMENT.md  Dockerfile  HACKATHON_PLAN.md  LOCAL_SETUP.md  Makefile  QUICK_START.md  README.md  ROADMAP.md  SETUP.md  STATUS.md  check_setup.py  docker-compose.yml  package.json  pnpm-workspace.yaml  requirements-research-pdf.txt  requirements-research.txt  requirements.txt  start_bot.ps1  start_bot.sh  start_tunnel.py  start_viz.py  tribe_v2_5090_ISU_demo.ipynb  turbo.json
apps/api/: pyproject.toml
apps/api/mindscope_api/: celery_app.py  main.py  models.py
apps/api/mindscope_api/routers/: jobs.py
assets/: cat_demo_20s.tsv  dl_neurosci.tsv  dl_spiderman.tsv  test_neurosci_30s.tsv  test_spiderman_25s.tsv
bot/: README.md  __init__.py  analysis.py  bot.py  cat_gate.py  config.py  file_validator.py  gcs_store.py  gemma.py  gemma_vision.py  hwmon.py  kimi_client.py  logger.py  make_demo_asset.py  media_gate.py  model_manager.py  ollama_client.py  pipeline.py  prompts.py  results_store.py  run_demo.py  scheduler.py  tiers.py  tunnel.py  visualize.py  watch_logs.py
docs/: BUDGET.md  CONSOLIDATION.md  DATASET_LEGAL.md  FACULTY_SPONSOR_EMAIL.md  GCP_SERVICES.md  GCP_SETUP.md  HACKATHON_STRATEGY.md  ISU_PROPOSAL.md  KIMI_VS_GEMMA.md  LINKEDIN_DECORATORS.md  LOCAL_FINETUNE_PLAN.md  REGISTRAR_COMPARISON.md
gcp/: Dockerfile.server  build-and-push.sh  cloudbuild-server.yaml  init.py  poll-job.sh  remote_inference.py  requirements-server.txt  run-inference.sh  (+2 more)
workers/tribe/: Dockerfile  pyproject.toml  serve.py
(+135 files in other folders)
