[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mindscope-api"
version = "0.1.0"
description = "MindScope API: TRIBE v2 inference + Gemma integration"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "redis==5.0.1",
    "celery==5.3.4",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "httpx==0.25.2",
    "boto3==1.34.5",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "opentelemetry-api==1.21.0",
    "opentelemetry-sdk==1.21.0",
    "opentelemetry-exporter-otlp==0.42b0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.12.0",
    "ruff==0.1.8",
]

[tool.hatch.envs.default]
dependencies = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
]
