[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mindscope-tribe-worker"
version = "0.1.0"
description = "MindScope TRIBE v2 inference worker"
requires-python = ">=3.11"
dependencies = [
    "celery==5.3.4",
    "redis==5.0.1",
    "torch==2.1.1",
    "pydantic==2.5.3",
    "numpy==1.24.3",
    "nibabel==5.1.0",
    "nilearn==0.10.1",
    "scipy==1.11.4",
]
